clusters/omni-cluster/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: strict-mtls
  namespace: demo-app
spec:
  mtls:
    mode: STRICT
